# Source-Code-Reading

./: README.md
read/: ImageNet Classification with Deep Convolutional Neural Networks.md  Learning Efficient Convolutional Networks through Network Slimming.md  M2Det A Single-Shot Object Detector based on Multi-Level Feature Pyramid Network.md  Rich feature hierarchies for accurate object detection and semantic segmentation.md
source/DarkNet/: README.md
source/Detectron2/detectron2-0.6/: README.md
source/Detectron2/yolov7_d2-1.0/: .gitignore  train_net.py
source/LLM/DeepSeek-MoE/: README.md
source/LLM/Hunyuan-7B/: LICENSE.txt  Notice.txt  README.md  README_CN.md
source/LLM/Hunyuan-Large/: .gitmodules  LICENSE.txt  Notice  README.md  README_CN.md  requirements.txt
source/LLM/markitdown-0.0.1a3/: Dockerfile  README.md  pyproject.toml
source/LLM/markitdown-0.0.1a3/tests/: __init__.py
source/LLM/markitdown-0.0.1a3/tests/test_files/: test.pptx  test_mskanji.csv
source/LLM_Frame/OpenRLHF-0.6.1.post1/: read_arch.md
source/LLM_Frame/markitdown-0.0.1a3/: .gitattributes  .pre-commit-config.yaml  test_markitdown.py
source/LLM_Frame/ms-swift-3.1.1/: read_arch1.md
source/LLM_Frame/mwp_ReFT/: sampling.py  train_reward_model.py  train_rl_reft.py  train_sft_model.py
source/LLM_Frame/trl-0.15.2/: read_arch1.md
source/LLM_Frame/unsloth-2025-02-v2/: unsloth-cli.py
source/LLM_Frame/verl-0.2.0.post2/: .gitignore  .readthedocs.yaml  .style.yapf  README.md  pyproject.toml  read_arch.md  requirements.txt
source/MindSpore/: README.md  models.md
source/OpenCV/: README.md
source/OpenMMLab/: MIM.md  MMCV.md  MMClassification.md  MMDetection.md  MMEngine.md  MMEval.md  MMHuman3D.md  MMOCR.md  MMPose.md  MMSegmentation.md  MMSelfSup.md  README.md
source/PaddlePaddle/: README.md
source/Pytorch/: README.md
source/YOLO/: README.md  damo_yolo.md  dynamic_det.md  mmyolo.md  scaled_yolov4.md  ultralytics.md  yolo_world.md  yolof.md  yolor.md  yolos.md  yolov10.md  yolov5.md  yolov6.md  yolov7.md  yolov9.md  yolox.md
(+1556 files in other folders)
